add personal_log integration in default discovery popup

--- a/mod.conf
+++ b/mod.conf
@@ -1,2 +1,3 @@
 name = named_waypoints
 description = A library mod for managing waypoints shown in player HUDs that can be discovered by exploration.
+optional_depends = personal_log
